// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/GlobalHeaderSettingsMenu languages menu open should match snapshot 1`] = `
<div>
  <div
    class="GlobalHeaderSettingsMenu"
  >
    <div
      class="MenuWrapper"
    >
      <div
        class="menu-entry"
      >
        <i
          class="CompassIcon icon-settings-outline SettingsIcon"
        />
      </div>
      <div
        class="Menu noselect left"
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div
              class="MenuOption TextOption menu-option"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Import archive
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              class="MenuOption TextOption menu-option"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Export archive
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              class="MenuOption SubMenuOption menu-option open-left"
              id="lang"
            >
              <svg
                class="SubmenuTriangleIcon Icon"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="50,35 75,50 50,65"
                />
              </svg>
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Set language
              </div>
              <div
                class="SubMenu Menu noselect left-bottom"
              >
                <div
                  class="menu-contents"
                >
                  <div
                    class="menu-options"
                  >
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        English
                      </div>
                      <svg
                        class="CheckIcon Icon"
                        viewBox="0 0 100 100"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polyline
                          points="20,60 40,80 80,40"
                        />
                      </svg>
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Español
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Deutsch
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        日本語
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Français
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Nederlands
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Pусский
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        中文 (繁體)
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        中文 (简体)
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Türkçe
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="MenuOption TextOption menu-option"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Occitan
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                  <div
                    class="menu-spacer hideOnWidescreen"
                  />
                  <div
                    class="menu-options hideOnWidescreen"
                  >
                    <div
                      class="MenuOption TextOption menu-option menu-cancel"
                    >
                      <div
                        class="noicon"
                      />
                      <div
                        class="menu-name"
                      >
                        Cancel
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MenuOption SwitchOption menu-option"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Random icons
              </div>
              <div
                class="Switch on"
              >
                <div
                  class="octo-switch-inner"
                />
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              class="MenuOption TextOption menu-option menu-cancel"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Cancel
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/GlobalHeaderSettingsMenu settings menu closed should match snapshot 1`] = `
<div>
  <div
    class="GlobalHeaderSettingsMenu"
  >
    <div
      class="MenuWrapper"
    >
      <div
        class="menu-entry"
      >
        <i
          class="CompassIcon icon-settings-outline SettingsIcon"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/GlobalHeaderSettingsMenu settings menu open should match snapshot 1`] = `
<div>
  <div
    class="GlobalHeaderSettingsMenu"
  >
    <div
      class="MenuWrapper"
    >
      <div
        class="menu-entry"
      >
        <i
          class="CompassIcon icon-settings-outline SettingsIcon"
        />
      </div>
      <div
        class="Menu noselect left"
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div
              class="MenuOption TextOption menu-option"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Import archive
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              class="MenuOption TextOption menu-option"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Export archive
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              class="MenuOption SubMenuOption menu-option open-left"
              id="lang"
            >
              <svg
                class="SubmenuTriangleIcon Icon"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="50,35 75,50 50,65"
                />
              </svg>
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Set language
              </div>
            </div>
            <div
              class="MenuOption SwitchOption menu-option"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Random icons
              </div>
              <div
                class="Switch on"
              >
                <div
                  class="octo-switch-inner"
                />
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              class="MenuOption TextOption menu-option menu-cancel"
            >
              <div
                class="noicon"
              />
              <div
                class="menu-name"
              >
                Cancel
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
